# Short-Form-Video-Generator

./: .gitattributes  .gitignore  README.md  body.txt  pyproject.toml  requirements.txt  run.py  text.txt  voices.json
src/: main.py
src/renderer/: final_renderer.py  subtitle_renderer.py
src/subtitles/: subtitle_aligner.py  subtitle_generator.py  subtitle_image_generator.py  transcriber.py
src/text_to_speech/: edge_tts_wrapper.py  kokoro_tts_wrapper.py  piper.py  tts_engine.py  tts_wrapper.py  voice_manager.py
src/utils/: cleaner.py  ffmpeg.py  logger.py  loggr.py  reddit.py  settings_manager.py  text_processor.py
