[project]
name = "videogenerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coqui-tts==0.26.2",
    "requests==2.32.4",
    "tqdm==4.67.1",
    "pip==25.1.1",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "torchaudio==2.7.1",
    "markupsafe==3.0.2",
    "rich==14.0.0",
    "pydub==0.25.1",
    "whisper-timestamped==1.15.8",
    "pillow>=11.0.0",
    "python-ffmpeg>=2.0.12",
    "numpy>=2.1.2",
]

[tool.uv.sources]
torch = { index = "pytorch" }
requests = { index = "default" }
tqdm = { index = "default" }
markupsafe = { index = "default" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"

[[tool.uv.index]]
name = "default"
url = "https://pypi.org/simple"
default = true
